compiler/IntCode/codegen/ICode_parser.output
Terminals unused in grammar

   TOK_LEX_ERROR
   TOK_LPAREN
   TOK_RPAREN


Grammar

    0 $accept: specification $end

    1 specification: instruction_star

    2 instruction_star: /* empty */
    3                 | instruction_star instruction_optlbl TOK_NEWLINE
    4                 | instruction_star TOK_NEWLINE
    5                 | instruction_star error TOK_NEWLINE

    6 instruction_optlbl: label instruction
    7                   | instruction

    8 label: TOK_IDENT TOK_COLON

    9 instruction: TOK_BINIOP ioperand ioperand TOK_IREG
   10            | TOK_BINFOP foperand foperand TOK_FREG
   11            | TOK_FNEG foperand foperand
   12            | TOK_NEG ioperand ioperand
   13            | TOK_PRTI ioperand
   14            | TOK_PRTF foperand
   15            | TOK_PRTS soperand
   16            | TOK_JMP TOK_IDENT
   17            | TOK_JMPI TOK_IREG
   18            | TOK_JMPC TOK_CMPIOP ioperand ioperand TOK_IDENT
   19            | TOK_JMPC TOK_CMPFOP foperand foperand TOK_IDENT
   20            | TOK_JMPCI TOK_CMPIOP ioperand ioperand TOK_IREG
   21            | TOK_JMPCI TOK_CMPFOP foperand foperand TOK_IREG
   22            | TOK_MOVL TOK_IDENT TOK_IREG
   23            | TOK_MOVS TOK_STRCONST TOK_IREG
   24            | TOK_MOVI ioperand TOK_IREG
   25            | TOK_MOVF foperand TOK_FREG
   26            | TOK_MOVIF ioperand TOK_FREG
   27            | TOK_MOVFI foperand TOK_IREG
   28            | TOK_STI ioperand ioperand
   29            | TOK_STF foperand ioperand
   30            | TOK_LDI ioperand TOK_IREG
   31            | TOK_LDF ioperand TOK_FREG
   32            | TOK_IN TOK_IREG
   33            | TOK_INI TOK_IREG
   34            | TOK_INF TOK_FREG

   35 ioperand: TOK_IREG
   36         | TOK_INTNUM

   37 soperand: TOK_IREG
   38         | TOK_STRCONST

   39 foperand: TOK_FREG
   40         | TOK_DOUBLENUM


Terminals, with rules where they appear

$end (0) 0
error (256) 5
TOK_LEX_ERROR (258)
TOK_INTNUM (259) 36
TOK_DOUBLENUM (260) 40
TOK_STRCONST (261) 23 38
TOK_IDENT (262) 8 16 18 19 22
TOK_IREG (263) 9 17 20 21 22 23 24 27 30 32 33 35 37
TOK_FREG (264) 10 25 26 31 34 39
TOK_BINIOP (265) 9
TOK_BINFOP (266) 10
TOK_NEG (267) 12
TOK_FNEG (268) 11
TOK_CMPIOP (269) 18 20
TOK_CMPFOP (270) 19 21
TOK_MOVL (271) 22
TOK_MOVS (272) 23
TOK_MOVI (273) 24
TOK_MOVF (274) 25
TOK_MOVIF (275) 26
TOK_MOVFI (276) 27
TOK_STI (277) 28
TOK_STF (278) 29
TOK_LDI (279) 30
TOK_LDF (280) 31
TOK_JMP (281) 16
TOK_JMPI (282) 17
TOK_JMPC (283) 18 19
TOK_JMPCI (284) 20 21
TOK_PRTI (285) 13
TOK_PRTF (286) 14
TOK_PRTS (287) 15
TOK_IN (288) 32
TOK_INI (289) 33
TOK_INF (290) 34
TOK_NEWLINE (291) 3 4 5
TOK_COLON (292) 8
TOK_LPAREN (293)
TOK_RPAREN (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
specification (41)
    on left: 1, on right: 0
instruction_star (42)
    on left: 2 3 4 5, on right: 1 3 4 5
instruction_optlbl (43)
    on left: 6 7, on right: 3
label (44)
    on left: 8, on right: 6
instruction (45)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
    28 29 30 31 32 33 34, on right: 6 7
ioperand (46)
    on left: 35 36, on right: 9 12 13 18 20 24 26 28 29 30 31
soperand (47)
    on left: 37 38, on right: 15
foperand (48)
    on left: 39 40, on right: 10 11 14 19 21 25 27 29


state 0

    0 $accept: . specification $end

    $default  reduce using rule 2 (instruction_star)

    specification     go to state 1
    instruction_star  go to state 2


state 1

    0 $accept: specification . $end

    $end  shift, and go to state 3


state 2

    1 specification: instruction_star .
    3 instruction_star: instruction_star . instruction_optlbl TOK_NEWLINE
    4                 | instruction_star . TOK_NEWLINE
    5                 | instruction_star . error TOK_NEWLINE

    error        shift, and go to state 4
    TOK_IDENT    shift, and go to state 5
    TOK_BINIOP   shift, and go to state 6
    TOK_BINFOP   shift, and go to state 7
    TOK_NEG      shift, and go to state 8
    TOK_FNEG     shift, and go to state 9
    TOK_MOVL     shift, and go to state 10
    TOK_MOVS     shift, and go to state 11
    TOK_MOVI     shift, and go to state 12
    TOK_MOVF     shift, and go to state 13
    TOK_MOVIF    shift, and go to state 14
    TOK_MOVFI    shift, and go to state 15
    TOK_STI      shift, and go to state 16
    TOK_STF      shift, and go to state 17
    TOK_LDI      shift, and go to state 18
    TOK_LDF      shift, and go to state 19
    TOK_JMP      shift, and go to state 20
    TOK_JMPI     shift, and go to state 21
    TOK_JMPC     shift, and go to state 22
    TOK_JMPCI    shift, and go to state 23
    TOK_PRTI     shift, and go to state 24
    TOK_PRTF     shift, and go to state 25
    TOK_PRTS     shift, and go to state 26
    TOK_IN       shift, and go to state 27
    TOK_INI      shift, and go to state 28
    TOK_INF      shift, and go to state 29
    TOK_NEWLINE  shift, and go to state 30

    $end  reduce using rule 1 (specification)

    instruction_optlbl  go to state 31
    label               go to state 32
    instruction         go to state 33


state 3

    0 $accept: specification $end .

    $default  accept


state 4

    5 instruction_star: instruction_star error . TOK_NEWLINE

    TOK_NEWLINE  shift, and go to state 34


state 5

    8 label: TOK_IDENT . TOK_COLON

    TOK_COLON  shift, and go to state 35


state 6

    9 instruction: TOK_BINIOP . ioperand ioperand TOK_IREG

    TOK_INTNUM  shift, and go to state 36
    TOK_IREG    shift, and go to state 37

    ioperand  go to state 38


state 7

   10 instruction: TOK_BINFOP . foperand foperand TOK_FREG

    TOK_DOUBLENUM  shift, and go to state 39
    TOK_FREG       shift, and go to state 40

    foperand  go to state 41


state 8

   12 instruction: TOK_NEG . ioperand ioperand

    TOK_INTNUM  shift, and go to state 36
    TOK_IREG    shift, and go to state 37

    ioperand  go to state 42


state 9

   11 instruction: TOK_FNEG . foperand foperand

    TOK_DOUBLENUM  shift, and go to state 39
    TOK_FREG       shift, and go to state 40

    foperand  go to state 43


state 10

   22 instruction: TOK_MOVL . TOK_IDENT TOK_IREG

    TOK_IDENT  shift, and go to state 44


state 11

   23 instruction: TOK_MOVS . TOK_STRCONST TOK_IREG

    TOK_STRCONST  shift, and go to state 45


state 12

   24 instruction: TOK_MOVI . ioperand TOK_IREG

    TOK_INTNUM  shift, and go to state 36
    TOK_IREG    shift, and go to state 37

    ioperand  go to state 46


state 13

   25 instruction: TOK_MOVF . foperand TOK_FREG

    TOK_DOUBLENUM  shift, and go to state 39
    TOK_FREG       shift, and go to state 40

    foperand  go to state 47


state 14

   26 instruction: TOK_MOVIF . ioperand TOK_FREG

    TOK_INTNUM  shift, and go to state 36
    TOK_IREG    shift, and go to state 37

    ioperand  go to state 48


state 15

   27 instruction: TOK_MOVFI . foperand TOK_IREG

    TOK_DOUBLENUM  shift, and go to state 39
    TOK_FREG       shift, and go to state 40

    foperand  go to state 49


state 16

   28 instruction: TOK_STI . ioperand ioperand

    TOK_INTNUM  shift, and go to state 36
    TOK_IREG    shift, and go to state 37

    ioperand  go to state 50


state 17

   29 instruction: TOK_STF . foperand ioperand

    TOK_DOUBLENUM  shift, and go to state 39
    TOK_FREG       shift, and go to state 40

    foperand  go to state 51


state 18

   30 instruction: TOK_LDI . ioperand TOK_IREG

    TOK_INTNUM  shift, and go to state 36
    TOK_IREG    shift, and go to state 37

    ioperand  go to state 52


state 19

   31 instruction: TOK_LDF . ioperand TOK_FREG

    TOK_INTNUM  shift, and go to state 36
    TOK_IREG    shift, and go to state 37

    ioperand  go to state 53


state 20

   16 instruction: TOK_JMP . TOK_IDENT

    TOK_IDENT  shift, and go to state 54


state 21

   17 instruction: TOK_JMPI . TOK_IREG

    TOK_IREG  shift, and go to state 55


state 22

   18 instruction: TOK_JMPC . TOK_CMPIOP ioperand ioperand TOK_IDENT
   19            | TOK_JMPC . TOK_CMPFOP foperand foperand TOK_IDENT

    TOK_CMPIOP  shift, and go to state 56
    TOK_CMPFOP  shift, and go to state 57


state 23

   20 instruction: TOK_JMPCI . TOK_CMPIOP ioperand ioperand TOK_IREG
   21            | TOK_JMPCI . TOK_CMPFOP foperand foperand TOK_IREG

    TOK_CMPIOP  shift, and go to state 58
    TOK_CMPFOP  shift, and go to state 59


state 24

   13 instruction: TOK_PRTI . ioperand

    TOK_INTNUM  shift, and go to state 36
    TOK_IREG    shift, and go to state 37

    ioperand  go to state 60


state 25

   14 instruction: TOK_PRTF . foperand

    TOK_DOUBLENUM  shift, and go to state 39
    TOK_FREG       shift, and go to state 40

    foperand  go to state 61


state 26

   15 instruction: TOK_PRTS . soperand

    TOK_STRCONST  shift, and go to state 62
    TOK_IREG      shift, and go to state 63

    soperand  go to state 64


state 27

   32 instruction: TOK_IN . TOK_IREG

    TOK_IREG  shift, and go to state 65


state 28

   33 instruction: TOK_INI . TOK_IREG

    TOK_IREG  shift, and go to state 66


state 29

   34 instruction: TOK_INF . TOK_FREG

    TOK_FREG  shift, and go to state 67


state 30

    4 instruction_star: instruction_star TOK_NEWLINE .

    $default  reduce using rule 4 (instruction_star)


state 31

    3 instruction_star: instruction_star instruction_optlbl . TOK_NEWLINE

    TOK_NEWLINE  shift, and go to state 68


state 32

    6 instruction_optlbl: label . instruction

    TOK_BINIOP  shift, and go to state 6
    TOK_BINFOP  shift, and go to state 7
    TOK_NEG     shift, and go to state 8
    TOK_FNEG    shift, and go to state 9
    TOK_MOVL    shift, and go to state 10
    TOK_MOVS    shift, and go to state 11
    TOK_MOVI    shift, and go to state 12
    TOK_MOVF    shift, and go to state 13
    TOK_MOVIF   shift, and go to state 14
    TOK_MOVFI   shift, and go to state 15
    TOK_STI     shift, and go to state 16
    TOK_STF     shift, and go to state 17
    TOK_LDI     shift, and go to state 18
    TOK_LDF     shift, and go to state 19
    TOK_JMP     shift, and go to state 20
    TOK_JMPI    shift, and go to state 21
    TOK_JMPC    shift, and go to state 22
    TOK_JMPCI   shift, and go to state 23
    TOK_PRTI    shift, and go to state 24
    TOK_PRTF    shift, and go to state 25
    TOK_PRTS    shift, and go to state 26
    TOK_IN      shift, and go to state 27
    TOK_INI     shift, and go to state 28
    TOK_INF     shift, and go to state 29

    instruction  go to state 69


state 33

    7 instruction_optlbl: instruction .

    $default  reduce using rule 7 (instruction_optlbl)


state 34

    5 instruction_star: instruction_star error TOK_NEWLINE .

    $default  reduce using rule 5 (instruction_star)


state 35

    8 label: TOK_IDENT TOK_COLON .

    $default  reduce using rule 8 (label)


state 36

   36 ioperand: TOK_INTNUM .

    $default  reduce using rule 36 (ioperand)


state 37

   35 ioperand: TOK_IREG .

    $default  reduce using rule 35 (ioperand)


state 38

    9 instruction: TOK_BINIOP ioperand . ioperand TOK_IREG

    TOK_INTNUM  shift, and go to state 36
    TOK_IREG    shift, and go to state 37

    ioperand  go to state 70


state 39

   40 foperand: TOK_DOUBLENUM .

    $default  reduce using rule 40 (foperand)


state 40

   39 foperand: TOK_FREG .

    $default  reduce using rule 39 (foperand)


state 41

   10 instruction: TOK_BINFOP foperand . foperand TOK_FREG

    TOK_DOUBLENUM  shift, and go to state 39
    TOK_FREG       shift, and go to state 40

    foperand  go to state 71


state 42

   12 instruction: TOK_NEG ioperand . ioperand

    TOK_INTNUM  shift, and go to state 36
    TOK_IREG    shift, and go to state 37

    ioperand  go to state 72


state 43

   11 instruction: TOK_FNEG foperand . foperand

    TOK_DOUBLENUM  shift, and go to state 39
    TOK_FREG       shift, and go to state 40

    foperand  go to state 73


state 44

   22 instruction: TOK_MOVL TOK_IDENT . TOK_IREG

    TOK_IREG  shift, and go to state 74


state 45

   23 instruction: TOK_MOVS TOK_STRCONST . TOK_IREG

    TOK_IREG  shift, and go to state 75


state 46

   24 instruction: TOK_MOVI ioperand . TOK_IREG

    TOK_IREG  shift, and go to state 76


state 47

   25 instruction: TOK_MOVF foperand . TOK_FREG

    TOK_FREG  shift, and go to state 77


state 48

   26 instruction: TOK_MOVIF ioperand . TOK_FREG

    TOK_FREG  shift, and go to state 78


state 49

   27 instruction: TOK_MOVFI foperand . TOK_IREG

    TOK_IREG  shift, and go to state 79


state 50

   28 instruction: TOK_STI ioperand . ioperand

    TOK_INTNUM  shift, and go to state 36
    TOK_IREG    shift, and go to state 37

    ioperand  go to state 80


state 51

   29 instruction: TOK_STF foperand . ioperand

    TOK_INTNUM  shift, and go to state 36
    TOK_IREG    shift, and go to state 37

    ioperand  go to state 81


state 52

   30 instruction: TOK_LDI ioperand . TOK_IREG

    TOK_IREG  shift, and go to state 82


state 53

   31 instruction: TOK_LDF ioperand . TOK_FREG

    TOK_FREG  shift, and go to state 83


state 54

   16 instruction: TOK_JMP TOK_IDENT .

    $default  reduce using rule 16 (instruction)


state 55

   17 instruction: TOK_JMPI TOK_IREG .

    $default  reduce using rule 17 (instruction)


state 56

   18 instruction: TOK_JMPC TOK_CMPIOP . ioperand ioperand TOK_IDENT

    TOK_INTNUM  shift, and go to state 36
    TOK_IREG    shift, and go to state 37

    ioperand  go to state 84


state 57

   19 instruction: TOK_JMPC TOK_CMPFOP . foperand foperand TOK_IDENT

    TOK_DOUBLENUM  shift, and go to state 39
    TOK_FREG       shift, and go to state 40

    foperand  go to state 85


state 58

   20 instruction: TOK_JMPCI TOK_CMPIOP . ioperand ioperand TOK_IREG

    TOK_INTNUM  shift, and go to state 36
    TOK_IREG    shift, and go to state 37

    ioperand  go to state 86


state 59

   21 instruction: TOK_JMPCI TOK_CMPFOP . foperand foperand TOK_IREG

    TOK_DOUBLENUM  shift, and go to state 39
    TOK_FREG       shift, and go to state 40

    foperand  go to state 87


state 60

   13 instruction: TOK_PRTI ioperand .

    $default  reduce using rule 13 (instruction)


state 61

   14 instruction: TOK_PRTF foperand .

    $default  reduce using rule 14 (instruction)


state 62

   38 soperand: TOK_STRCONST .

    $default  reduce using rule 38 (soperand)


state 63

   37 soperand: TOK_IREG .

    $default  reduce using rule 37 (soperand)


state 64

   15 instruction: TOK_PRTS soperand .

    $default  reduce using rule 15 (instruction)


state 65

   32 instruction: TOK_IN TOK_IREG .

    $default  reduce using rule 32 (instruction)


state 66

   33 instruction: TOK_INI TOK_IREG .

    $default  reduce using rule 33 (instruction)


state 67

   34 instruction: TOK_INF TOK_FREG .

    $default  reduce using rule 34 (instruction)


state 68

    3 instruction_star: instruction_star instruction_optlbl TOK_NEWLINE .

    $default  reduce using rule 3 (instruction_star)


state 69

    6 instruction_optlbl: label instruction .

    $default  reduce using rule 6 (instruction_optlbl)


state 70

    9 instruction: TOK_BINIOP ioperand ioperand . TOK_IREG

    TOK_IREG  shift, and go to state 88


state 71

   10 instruction: TOK_BINFOP foperand foperand . TOK_FREG

    TOK_FREG  shift, and go to state 89


state 72

   12 instruction: TOK_NEG ioperand ioperand .

    $default  reduce using rule 12 (instruction)


state 73

   11 instruction: TOK_FNEG foperand foperand .

    $default  reduce using rule 11 (instruction)


state 74

   22 instruction: TOK_MOVL TOK_IDENT TOK_IREG .

    $default  reduce using rule 22 (instruction)


state 75

   23 instruction: TOK_MOVS TOK_STRCONST TOK_IREG .

    $default  reduce using rule 23 (instruction)


state 76

   24 instruction: TOK_MOVI ioperand TOK_IREG .

    $default  reduce using rule 24 (instruction)


state 77

   25 instruction: TOK_MOVF foperand TOK_FREG .

    $default  reduce using rule 25 (instruction)


state 78

   26 instruction: TOK_MOVIF ioperand TOK_FREG .

    $default  reduce using rule 26 (instruction)


state 79

   27 instruction: TOK_MOVFI foperand TOK_IREG .

    $default  reduce using rule 27 (instruction)


state 80

   28 instruction: TOK_STI ioperand ioperand .

    $default  reduce using rule 28 (instruction)


state 81

   29 instruction: TOK_STF foperand ioperand .

    $default  reduce using rule 29 (instruction)


state 82

   30 instruction: TOK_LDI ioperand TOK_IREG .

    $default  reduce using rule 30 (instruction)


state 83

   31 instruction: TOK_LDF ioperand TOK_FREG .

    $default  reduce using rule 31 (instruction)


state 84

   18 instruction: TOK_JMPC TOK_CMPIOP ioperand . ioperand TOK_IDENT

    TOK_INTNUM  shift, and go to state 36
    TOK_IREG    shift, and go to state 37

    ioperand  go to state 90


state 85

   19 instruction: TOK_JMPC TOK_CMPFOP foperand . foperand TOK_IDENT

    TOK_DOUBLENUM  shift, and go to state 39
    TOK_FREG       shift, and go to state 40

    foperand  go to state 91


state 86

   20 instruction: TOK_JMPCI TOK_CMPIOP ioperand . ioperand TOK_IREG

    TOK_INTNUM  shift, and go to state 36
    TOK_IREG    shift, and go to state 37

    ioperand  go to state 92


state 87

   21 instruction: TOK_JMPCI TOK_CMPFOP foperand . foperand TOK_IREG

    TOK_DOUBLENUM  shift, and go to state 39
    TOK_FREG       shift, and go to state 40

    foperand  go to state 93


state 88

    9 instruction: TOK_BINIOP ioperand ioperand TOK_IREG .

    $default  reduce using rule 9 (instruction)


state 89

   10 instruction: TOK_BINFOP foperand foperand TOK_FREG .

    $default  reduce using rule 10 (instruction)


state 90

   18 instruction: TOK_JMPC TOK_CMPIOP ioperand ioperand . TOK_IDENT

    TOK_IDENT  shift, and go to state 94


state 91

   19 instruction: TOK_JMPC TOK_CMPFOP foperand foperand . TOK_IDENT

    TOK_IDENT  shift, and go to state 95


state 92

   20 instruction: TOK_JMPCI TOK_CMPIOP ioperand ioperand . TOK_IREG

    TOK_IREG  shift, and go to state 96


state 93

   21 instruction: TOK_JMPCI TOK_CMPFOP foperand foperand . TOK_IREG

    TOK_IREG  shift, and go to state 97


state 94

   18 instruction: TOK_JMPC TOK_CMPIOP ioperand ioperand TOK_IDENT .

    $default  reduce using rule 18 (instruction)


state 95

   19 instruction: TOK_JMPC TOK_CMPFOP foperand foperand TOK_IDENT .

    $default  reduce using rule 19 (instruction)


state 96

   20 instruction: TOK_JMPCI TOK_CMPIOP ioperand ioperand TOK_IREG .

    $default  reduce using rule 20 (instruction)


state 97

   21 instruction: TOK_JMPCI TOK_CMPFOP foperand foperand TOK_IREG .

    $default  reduce using rule 21 (instruction)
